# pymeshfix

./: .appveyor.yml  .buildinfo  .clang-format  .clang-format-ignore  .doctr-files  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CMakeCache.txt  CMakeLists.txt  CNAME  MANIFEST.in  README.rst  api.html  azure-pipelines.yml  build.sh  docker.sh  dockerbuild.sh  genindex.html  github_deploy_key_pyvista_pymeshfix.enc  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_build.txt  requirements_docs.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  windows_build.bat
.ci/: azure-publish-dist.yml  azure-steps.yml  build_wheels.sh  macos-install-python.sh
.github/: dependabot.yml  release.yml
.github/workflows/: build-and-deploy.yml  docbuild.yml  testing-and-deployment.yml
_autosummary/: pymeshfix.MeshFix.html  pymeshfix.PyTMesh.html  pymeshfix.clean_from_arrays.html  pymeshfix.clean_from_file.html
_autosummary/_autosummary/: pymeshfix.MeshFix.clean.html  pymeshfix.MeshFix.degeneracy_removal.html  pymeshfix.MeshFix.extract_holes.html  pymeshfix.MeshFix.faces.html  pymeshfix.MeshFix.fill_holes.html  pymeshfix.MeshFix.intersection_removal.html  pymeshfix.MeshFix.join_closest_components.html  pymeshfix.MeshFix.load_arrays.html  pymeshfix.MeshFix.mesh.html  pymeshfix.MeshFix.n_boundaries.html  pymeshfix.MeshFix.plot.html  pymeshfix.MeshFix.points.html  pymeshfix.MeshFix.remove_smallest_components.html  pymeshfix.MeshFix.repair.html  pymeshfix.MeshFix.save.html  pymeshfix.PyTMesh.boundaries.html  pymeshfix.PyTMesh.clean.html  pymeshfix.PyTMesh.fill_small_boundaries.html  pymeshfix.PyTMesh.fix_connectivity.html  pymeshfix.PyTMesh.join_closest_components.html  pymeshfix.PyTMesh.load_array.html  pymeshfix.PyTMesh.load_file.html  pymeshfix.PyTMesh.n_boundaries.html  pymeshfix.PyTMesh.n_faces.html  pymeshfix.PyTMesh.n_points.html  pymeshfix.PyTMesh.remove_smallest_components.html  pymeshfix.PyTMesh.return_arrays.html  pymeshfix.PyTMesh.return_faces.html  pymeshfix.PyTMesh.return_points.html  pymeshfix.PyTMesh.save_file.html  pymeshfix.PyTMesh.select_intersecting_triangles.html  pymeshfix.PyTMesh.set_quiet.html  pymeshfix.PyTMesh.strong_degeneracy_removal.html  pymeshfix.PyTMesh.strong_intersection_removal.html
_downloads/0a2188cdc9ab9d0a467401debbe3ab17/: repair_planar.ipynb
_downloads/0c5e3f7fb0853b3a7f119ade3fddd8de/: torso.py
_downloads/19becafd148287ce3484b9870dc9330b/: bunny.py
_downloads/24c9d655a1cb9e7090e523188082e671/: cow.ipynb
_downloads/472753a131a4fa63ac340a1600a365f8/: repair_planar.py
_downloads/571b56e4f032d3d1ce8260347be71ecd/: cow.py
_downloads/63ba9045e6691bf580329bbae35d8548/: torso.ipynb
_downloads/700f1bf357ea69088c0a34b0aa306d26/: cow.py
_downloads/87ff65eb9bf4b89622fc5038dfb7623a/: bunny.ipynb
_downloads/8c2304a7db3bb5ef65786189c6b6749c/: torso.ipynb
_downloads/8f0e902e9e1a0c6c65886d6123f08076/: bunny.ipynb
_downloads/a765c73a2265f8a59b388228b14b1937/: cow.ipynb
_downloads/f6ec10d71c7996cd063d18b874e98bad/: repair_planar.ipynb
_sources/: api.rst.txt  sg_execution_times.rst.txt
_sources/_autosummary/: pymeshfix.MeshFix.rst.txt  pymeshfix.PyTMesh.rst.txt  pymeshfix.clean_from_arrays.rst.txt  pymeshfix.clean_from_file.rst.txt
_sources/_autosummary/_autosummary/: pymeshfix.MeshFix.clean.rst.txt  pymeshfix.MeshFix.degeneracy_removal.rst.txt  pymeshfix.MeshFix.extract_holes.rst.txt  pymeshfix.MeshFix.faces.rst.txt  pymeshfix.MeshFix.fill_holes.rst.txt  pymeshfix.MeshFix.intersection_removal.rst.txt  pymeshfix.MeshFix.join_closest_components.rst.txt  pymeshfix.MeshFix.load_arrays.rst.txt  pymeshfix.MeshFix.mesh.rst.txt  pymeshfix.MeshFix.n_boundaries.rst.txt  pymeshfix.MeshFix.plot.rst.txt  pymeshfix.MeshFix.points.rst.txt  pymeshfix.MeshFix.remove_smallest_components.rst.txt  pymeshfix.MeshFix.repair.rst.txt  pymeshfix.MeshFix.save.rst.txt  pymeshfix.PyTMesh.boundaries.rst.txt  pymeshfix.PyTMesh.clean.rst.txt  pymeshfix.PyTMesh.fill_small_boundaries.rst.txt  pymeshfix.PyTMesh.fix_connectivity.rst.txt  pymeshfix.PyTMesh.join_closest_components.rst.txt  pymeshfix.PyTMesh.load_array.rst.txt  pymeshfix.PyTMesh.load_file.rst.txt  pymeshfix.PyTMesh.n_boundaries.rst.txt  pymeshfix.PyTMesh.n_faces.rst.txt  pymeshfix.PyTMesh.n_points.rst.txt  pymeshfix.PyTMesh.remove_smallest_components.rst.txt  pymeshfix.PyTMesh.return_arrays.rst.txt  pymeshfix.PyTMesh.return_faces.rst.txt  (+6 more)
_sources/examples/: bunny.rst.txt  cow.rst.txt  index.rst.txt  repair_planar.rst.txt  sg_execution_times.rst.txt  torso.rst.txt
_static/: copybutton.js  documentation_options.js
doc/: Makefile  api.rst  conf.py  index.rst
doc/_templates/: custom-module-template.rst
docs/: Makefile  conf.py
docs/_templates/: layout.html
examples/: README.txt  bunny.html  bunny.py  cow.html  cow.py  index.html  repair_planar.html  repair_planar.py  sg_execution_times.html  torso.html  torso.py
pymeshfix/: __init__.py  _version.py  meshfix.py  vtkhelper.py
pymeshfix/Tests/: Fix.py  __init__.py
pymeshfix/cython/: _meshfix.pyx  basics.h  coordinates.cpp  coordinates.h  detectIntersections.cpp  edge.cpp  edge.h  holeFilling.cpp  io.cpp  jqsort.cpp  marchIntersections.cpp  matrix.cpp  meshfix.cpp  meshfix.h  point.cpp  point.h  subdivision.cpp  tin.cpp  tin.h  tmesh.cpp  triangle.h
pymeshfix/examples/: __init__.py  fix.py
pymeshfix/tests/: StanfordBunny.ply  __init__.py  fix.py
src/: _meshfix.cpp  _meshfix.pyx  array_support.h  checkAndRepair.cpp  coordinates.h  detectIntersections.cpp  edge.cpp  edge.h  graph.cpp  heap.cpp  heap.h  holeFilling.cpp  io.cpp  jqsort.cpp  list.cpp  list.h  marchIntersections.h  matrix.cpp  matrix.h  meshfix.cpp  meshfix.h  orientation.c  point.cpp  point.h  tin.cpp  tin.h  tmesh.cpp  triangle.cpp  triangle.h  vertex.cpp  vertex.h
src/pymeshfix/: __init__.py  _meshfix.pyi  meshfix.py
tests/: test__meshfix.py  test_native.py  test_pymeshfix.py  test_pyx_meshfix.py  test_withvtk.py
tools/: audit_wheel.sh  extract-deps.py
wheels/: pymeshfix-0.11.0-cp36-cp36m-linux_x86_64.whl
(+3 files in other folders)
