[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.33.0",
    "cython>=3.0.0",
    "numpy>=2,<3",
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
junit_family= "legacy"
filterwarnings = [
    # bogus numpy ABI warning (see numpy/#432)
    "ignore:.*numpy.dtype size changed.*:RuntimeWarning",
    "ignore:.*numpy.ufunc size changed.*:RuntimeWarning"
]

[tool.cibuildwheel]
archs = ["auto64"]  # 64-bit only
build = "cp39-* cp310-* cp311-*"  # 3.11+ are abi3 wheels
skip = "*musllinux*"
test-requires = "pytest"
test-command = "pytest {project}/tests"
before-build = "pip install abi3audit"

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]

[tool.cibuildwheel.macos]
archs = ["native"]
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel abi3audit"
repair-wheel-command = [
  "delvewheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]

[tool.codespell]
skip = '*.cxx,*.h,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,*.cpp,*.c'
quiet-level = 3

[tool.ruff]
line-length = 100
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]