[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]

[project]
authors = [
  {name = "PyVista Developers", email = "info@pyvista.org"}
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "numpy"
]
description = "Repair triangular meshes using MeshFix"
name = "pymeshfix"
readme = "README.rst"
requires-python = ">=3.10,<3.15"
version = "0.18.0"

[project.optional-dependencies]
docs = [
  "Sphinx",
  "pydata-sphinx-theme",
  "pyvista",
  "sphinx_gallery",
  "sphinx-notfound-page>=0.3.0",
  "sphinx-copybutton"
]
extras = [
  "pyvista"
]
tests = [
  "pyvista",
  "pytest",
  "pytest-cov"
]

[project.urls]
'Bug Reports' = 'https://github.com/pyvista/pymeshfix/issues'
Documentation = 'https://pymeshfix.pyvista.org/'
Homepage = 'https://github.com/pyvista/pymeshfix'
'Source Code' = 'https://github.com/pyvista/pymeshfix'

[tool.cibuildwheel]
archs = ["auto64"]  # 64-bit only
before-build = "pip install abi3audit"
build = "cp310-* cp311-* cp312-*"  # 3.12+ are abi3 wheels
skip = "*musllinux*"
test-command = "pytest {project}/tests -vv"
test-requires = "pytest pyvista meshio pymeshfix"

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}"
]

[tool.cibuildwheel.macos]
archs = ["native"]
environment = {MACOSX_DEPLOYMENT_TARGET = "10.13"}
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "bash tools/audit_wheel.sh {wheel}"
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel abi3audit"
repair-wheel-command = [
  "delvewheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}"
]

[tool.codespell]
quiet-level = 3
skip = '*.cxx,*.h,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,*.cpp,*.c'

[tool.pytest.ini_options]
junit_family = "legacy"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

[tool.scikit-build]
wheel.py-api = "cp312"
